--- a/Index.html
+++ b/Index.html
@@ -37,8 +37,8 @@
                     <i class="fas fa-bars"></i>
                 </div>
             </div>
-            <div class="social text-gray">
-                <a href="https://www.instagram.com/utopian_marketing/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <div class="social">
+                <a href="https://www.instagram.com/utopian_marketing/" target="_blank"><img src="images/instagram.png" alt="social-icon"></a>
             </div>
         </div>
     </nav>
@@ -49,18 +49,77 @@
 
         <!------------------------ Site Title ---------------------->
 
-        <section class="site-title">
+        <section class="site-title" data-aos="fade-up" data-aos-delay="100">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
-                <h3>Utopia Marketing</h3>
+                <!--h3>Utopia Marketing</h3-->
                 <h1>Who are We?</h1>
                 <!--button class="btn">Go</button-->
-                <p1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
-                    iure, autem nulla tenetur repellendus.</p1>
-                <br>
+                <div class="wrapper">                
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
+                    iure, autem nulla tenetur repellendus.</p>
+                </div>
             </div>
+            <div class="offer" data-aos="fade-up" data-aos-delay="100">
+                <h1>What We Offer</h1>
+                <div class="wrapper">                
+                    <p class="p1">As collected deficient objection by it discovery sincerity curiosity. Quiet decay who round three world whole has mrs man. Built the china there tried jokes which gay why. Assure in adieus wicket it is. But spoke round point and one joy. Offending her moonlight men sweetness see unwilling. Often of it tears whole oh balls share an.</p>
+                </div>
+            </div>
+            <div class="companies" data-aos="fade-up" data-aos-delay="100">
+                <h1>Companies We've Helped</h1>
+                <!--div class="wrapper">                
+                    <p class="p1">Enjoyed minutes related as at on on. Is fanny dried as often me. Goodness as reserved raptures to mistaken steepest oh screened he. Gravity he mr sixteen esteems. Mile home its new way with high told said. Finished no horrible blessing landlord dwelling dissuade if. Rent fond am he in on read. Anxious cordial demands settled entered in do to colonel.</p>
+                </div-->
+
+
+
+
+
+
+
+            <!--div class="meeting">
+                <h1>Setup A 15 Minute Meeting With Us</h1>
+                <iframe class="calendly" src="https://calendly.com/mcastro32902/meeting" width="100%" height="950" scrolling="no" frameborder="0"></iframe>
+                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            </div-->
         </section>
-        <section class="middle">
-            <div class="calendly-inline-widget" data-url="https://calendly.com/mcastro32902/"></div>
+            <div class="blog">
+                <div class="container" data-aos="fade-up" data-aos-delay="100">
+                    <div class="owl-carousel owl-theme blog-post">
+                        <div class="circle">
+                            <a href="https://www.youtube.com/c/jakepaul" target="_blank"><img src="images/jake.jpg" alt="client"></a>
+                            <p>Jake Paul</p>
+                        </div>
+                        <div class="circle">
+                            <a href="https://www.youtube.com/c/loganpaulvlogs" target="_blank"><img src="images/logan.jpg" alt="client"></a>
+                            <p>Logan Paul</p>
+                        </div>
+                        <div class="circle">
+                            <a href="https://www.youtube.com/c/ImanGadzhi" target="_blank"><img src="images/iman.jpg" alt="client"></a>
+                            <p>Iman Gadzhi</p>
+                        </div>
+                        <div class="circle">
+                            <a href="https://www.instagram.com/johncena/" target="_blank"><img src="images/john.jpg" alt="client"></a>
+                            <p>John Cena</p>
+                        </div>
+                        <div class="circle">
+                            <a href="https://www.instagram.com/vancityreynolds/" target="_blank"><img src="images/ryan.jpg" alt="client"></a>
+                            <p>Ryan Reynolds</p>
+                        </div>
+                    </div>
+                    <div class="owl-navigation">
+                        <span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
+                        <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="meeting" data-aos="fade-up" data-aos-delay="100">
+                <h1>Setup A 15 Minute Meeting With Us</h1>
+            </div>
+        <section class="middle" data-aos="fade-up" data-aos-delay="100">
+            <div class="calendly-inline-widget" data-url="https://calendly.com/mcastro32902/begin"></div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         </section> 
     </main>
@@ -71,11 +130,6 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="about-us" data-aos="fade-right" data-aos-delay="200">
-                <h2>About us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
-                    iure, autem nulla tenetur repellendus.</p>
-            </div>
             <div class="follow" data-aos="fade-left" data-aos-delay="200">
                 <h2>Follow us</h2>
                 <p>Let us be Social</p>
