Added to footer

--- a/Index.html
+++ b/Index.html
@@ -140,7 +140,8 @@
         </div>
         <div class="rights flex-row">
             <h4 class="text-gray">
-                Copyright ©2022 All rights reserved
+                Site Made by <a href="https://www.migcastro.com/" target="_blank">Miguel Castro</a><br>
+                Copyright© Utopia Marketing LLC.,2022 All rights reserved
             </h4>
         </div>
         <div class="move-up">
