Added Header background

--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,11 @@
     <main>
 
         <!------------------------ Site Title ---------------------->
+        <div class="background">
+            <img src="images/cover.jpeg" alt="cover">
+            <h4>Utopia Marketing</h4>
+            <p4>The Best In Marketing</p4>
+        </div>
 
         <section class="site-title" data-aos="fade-up" data-aos-delay="100">
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
@@ -55,33 +60,19 @@
                 <h1>Who are We?</h1>
                 <!--button class="btn">Go</button-->
                 <div class="wrapper">                
-                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
-                    iure, autem nulla tenetur repellendus.</p>
+                    <p class="p1">Utopia, we're in the business of growing yours, and makes it our job
+                        to develop marketing campaigns that deliver astounding results.</p>
                 </div>
             </div>
             <div class="offer" data-aos="fade-up" data-aos-delay="100">
                 <h1>What We Offer</h1>
                 <div class="wrapper">                
-                    <p class="p1">As collected deficient objection by it discovery sincerity curiosity. Quiet decay who round three world whole has mrs man. Built the china there tried jokes which gay why. Assure in adieus wicket it is. But spoke round point and one joy. Offending her moonlight men sweetness see unwilling. Often of it tears whole oh balls share an.</p>
+                    <p class="p1">We create Funnels to drive the correct traffic towards your Business,
+                        bringing the attention your business seeks.</p>
                 </div>
             </div>
             <div class="companies" data-aos="fade-up" data-aos-delay="100">
                 <h1>Companies We've Helped</h1>
-                <!--div class="wrapper">                
-                    <p class="p1">Enjoyed minutes related as at on on. Is fanny dried as often me. Goodness as reserved raptures to mistaken steepest oh screened he. Gravity he mr sixteen esteems. Mile home its new way with high told said. Finished no horrible blessing landlord dwelling dissuade if. Rent fond am he in on read. Anxious cordial demands settled entered in do to colonel.</p>
-                </div-->
-
-
-
-
-
-
-
-            <!--div class="meeting">
-                <h1>Setup A 15 Minute Meeting With Us</h1>
-                <iframe class="calendly" src="https://calendly.com/mcastro32902/meeting" width="100%" height="950" scrolling="no" frameborder="0"></iframe>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-            </div-->
         </section>
             <div class="blog">
                 <div class="container" data-aos="fade-up" data-aos-delay="100">
