FIXES TO BANNER

--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
 
         <!------------------------ Site Title ---------------------->
         <div class="background">
-            <img src="images/cover.jpeg" alt="cover">
+            <img src="images/cover.jpg" alt="cover">
             <h4>Utopia Marketing</h4>
             <p4>The Best In Marketing</p4>
         </div>
