Remove fake images

--- a/Index.html
+++ b/Index.html
@@ -78,24 +78,24 @@
                 <div class="container" data-aos="fade-up" data-aos-delay="100">
                     <div class="owl-carousel owl-theme blog-post">
                         <div class="circle">
-                            <a href="https://www.youtube.com/c/jakepaul" target="_blank"><img src="images/jake.jpg" alt="client"></a>
-                            <p>Jake Paul</p>
+                            <a href="https://t.me/+kirUvCq2-7o0OGIx" target="_blank"><img src="images/pipsmaster.PNG" alt="client"></a>
+                            <p>PipsMaster</p>
                         </div>
                         <div class="circle">
-                            <a href="https://www.youtube.com/c/loganpaulvlogs" target="_blank"><img src="images/logan.jpg" alt="client"></a>
-                            <p>Logan Paul</p>
+                            <a href="https://t.me/+kirUvCq2-7o0OGIx" target="_blank"><img src="images/pipsmaster.PNG" alt="client"></a>
+                            <p>PipsMaster</p>
                         </div>
                         <div class="circle">
-                            <a href="https://www.youtube.com/c/ImanGadzhi" target="_blank"><img src="images/iman.jpg" alt="client"></a>
-                            <p>Iman Gadzhi</p>
+                            <a href="https://t.me/+kirUvCq2-7o0OGIx" target="_blank"><img src="images/pipsmaster.PNG" alt="client"></a>
+                            <p>PipsMaster</p>
                         </div>
                         <div class="circle">
-                            <a href="https://www.instagram.com/johncena/" target="_blank"><img src="images/john.jpg" alt="client"></a>
-                            <p>John Cena</p>
+                            <a href="https://t.me/+kirUvCq2-7o0OGIx" target="_blank"><img src="images/pipsmaster.PNG" alt="client"></a>
+                            <p>PipsMaster</p>
                         </div>
                         <div class="circle">
-                            <a href="https://www.instagram.com/vancityreynolds/" target="_blank"><img src="images/ryan.jpg" alt="client"></a>
-                            <p>Ryan Reynolds</p>
+                            <a href="https://t.me/+kirUvCq2-7o0OGIx" target="_blank"><img src="images/pipsmaster.PNG" alt="client"></a>
+                            <p>PipsMaster</p>
                         </div>
                     </div>
                     <div class="owl-navigation">
